Added the respected urls